--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.5.2"
+    "fs": "0.0.1-security",
+    "inquirer": "^6.5.2",
+    "node": "^14.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jest": "^24.8.0"
